--- a/roadmap.yml
+++ b/roadmap.yml
@@ -8,6 +8,7 @@ Build 2
 - Einmal im Jahr hinzufügen.
 - Einmal im Jahr und Interval mäßig an diesem tag.
 - Einmal im Jahr und Zeitlisten mäßig an diesem tag.
+- Blacklisten für bestimmte daten machen. aka jeden Sonntag, jedoch an feiertagen nicht
 
 Build 1
 - +/autoex | Infobefehl
