--- a/bungee.yml
+++ b/bungee.yml
@@ -1,4 +1,4 @@
 name: AutomaticExecute
-main: main.java.me.avankziar.automaticexecute.bungee.AutomaticExecute
+main: main.java.me.avankziar.aex.bungee.AutomaticExecute
 version: 3
 author: Avankziar
