--- a/plugin.yml
+++ b/plugin.yml
@@ -2,5 +2,6 @@ name: AutomaticExecute
 main: main.java.me.avankziar.aex.spigot.AutomaticExecute
 version: 3
 author: Avankziar
-api-version: 1.19
+api-version: 1.17
 description: A Auto Execute System
+softdepend: [InterfaceHub]
