--- a/src/resources/automaticexecute.yml
+++ b/src/resources/automaticexecute.yml
@@ -1,3 +1,4 @@
+file-version: '1'
 #MessageNEW: Please Ignore!
 #  Rythmus: '' #ONCE only once, ONCE_A_DAY multiple but once a day, MULTIPLE_ON_THE_DAY INTERVAL in intervals, ON_TIMES for Times on all days
 #  Sending:
