--- a/pom.xml
+++ b/pom.xml
@@ -96,11 +96,6 @@
       		<name>GitHub Avankziar Apache Maven Packages</name>
 	        <url>https://maven.pkg.github.com/Avankziar/InterfaceHub</url>
 	    </repository>
-		<!-- Spigot -->
-		<repository>
-			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-		</repository>
 		<!-- Bungeecord -->
         <repository>
             <id>bungeecord-repo</id>
@@ -123,12 +118,12 @@
 	    </repository>
 	</repositories>
 	<dependencies>
-		<!--Spigot API -->
+		<!--Paper API-->
 		<dependency>
-			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot-api</artifactId>
-			<version>1.21-R0.1-SNAPSHOT</version>
-			<scope>provided</scope>
+		    <groupId>io.papermc.paper</groupId>
+		    <artifactId>paper-api</artifactId>
+		    <version>1.21-R0.1-SNAPSHOT</version>
+		    <scope>provided</scope>
 		</dependency>
 		<!-- Bungeecord -->
 		<dependency>
